[tool.poetry]
name = "CHANGE_ME"
version = "0.1.0"
description = ""
authors = ["Anthony Almarza <anthony.almarza@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6"
black = "^20.8b1"
flake8 = "^3.8.4"
mypy = "^0.790"
pytest-sugar = "^0.9.4"
pytest-mock = "^3.4.0"
pytest-responses = "^0.4.0"
pytest-picked = "^0.4.4"
pytest-instafail = "^0.4.2"
freezegun = "^1.0.0"
factory-boy = "^3.1.0"
codecov = "^2.1.11"
coverage = {extras = ["toml"], version = "^5.3"}
ipython = "^7.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
source = [
    "CHANGE_ME",
]
omit = [
    "tests/*",
    "factories/*"
]

[tool.coverage.report]
omit = [
    "tests/*",
    "factories/*"
]

[tool.black]
line-length = 79

[tool.pytest.ini_options]
addopts = "-s"
python_files = [
    "test_*.py",
    "tests.py",
    "*_tests.py"
]
testpaths = [
    "./tests",
]
