[tool.poetry]
name = "acru-l-toolkit"
version = "1.0.0-alpha"
description = ""
authors = ["Anthony Almarza <anthony.almarza@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "acrul_toolkit", from = "src" },
]
# https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 3 - Alpha",
    #"Development Status :: 4 - Beta",
    #"Development Status :: 5 - Production/Stable",
    #"Development Status :: 6 - Mature",
    "Natural Language :: English",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.16.40"

[tool.poetry.dev-dependencies]
pytest = "^6"
black = "^20.8b1"
flake8 = "^3.8.4"
mypy = "^0.790"
pytest-sugar = "^0.9.4"
pytest-mock = "^3.4.0"
pytest-responses = "^0.4.0"
pytest-picked = "^0.4.4"
pytest-instafail = "^0.4.2"
freezegun = "^1.0.0"
factory-boy = "^3.1.0"
codecov = "^2.1.11"
coverage = {extras = ["toml"], version = "^5.3"}
ipython = "^7.19.0"
pre-commit = "^2.9.3"
Sphinx = "^3.4.1"
sphinx-sitemap = "^2.2.0"
sphinx-pyreverse = "^0.0.13"
sphinx-autodoc-typehints = "^1.11.1"
sphinx-autobuild = "^2020.9.1"
recommonmark = "^0.7.1"

[tool.poetry.scripts]
tests = "scripts.tests:main"
docs-autobuild = "scripts.docs_autobuild:main"
docs-build = "scripts.docs_build:main"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
source = [
    "acrul_toolkit"
]
omit = [
    "tests/*",
    "factories/*"
]

[tool.coverage.report]
omit = [
    "tests/*",
    "factories/*"
]
show_missing = true
skip_empty = true
fail_under = 70

[tool.black]
line-length = 79

[tool.pytest.ini_options]
addopts = "-s"
python_files = [
    "test_*.py",
    "tests.py",
    "*_tests.py"
]
testpaths = [
    "./tests",
]
